--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
 
 <div id ="header_text">Форма реєстрації</div>
 
-	<form method="post" action="app/models/register.php" id ="register_form">
+	<form method="post" action="app/models/db_select_action.php" id ="register_form">
 	
 	<ul>
 
@@ -52,6 +52,15 @@
 </div>
 
 <div id ="loader" style ="text-align:center;"><img style ="width:177.777px;" src ="images/brain.gif"></div>
+
+<div id ="intro_text" class ="greet_message" style ="font-size: 15px;width: 500px;margin: 0 auto;text-align:left;border-bottom: 2px solid #ccc !important;border: 1px solid #d1d1d1;margin-top: 30px;border-radius: 20px;padding-left: 20px;padding-right: 20px;padding-bottom: 30px;display:none;">
+
+	<br><span style ="font-size: 22px;text-decoration: underline;">Список модификаций</span></br>
+	<br>1. Модифицировал некоторые из SQL запросов, в соответсвии с текущим пониманием структуры таблицы t_koatuu_tree.</br>
+	<br>2. Переписал все с процедурного в объектно-ориентированный стиль.</br>
+	<br>3. Избавился от тримов.</br>
+	
+</div>
 
 </body>
 </html>
